--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL       = "localhost"
+baseURL       = "."
 languageCode  = "pt-br"
 title         = "Via Arto - Personalizados e Brindes"
 theme         = "roxo-hugo"
