--- a/config.toml
+++ b/config.toml
@@ -41,8 +41,8 @@ publishDir    = "docs"
 
 # Site Params
 [params]
-  logo = "images/logo.png"
-  logo_footer = "images/logo-footer.png"
+  logo = "images/logo-viaarto-redondo-transparente.png"
+  logo_footer = "images/logo-viaarto-horizontal-small.png"
   favicon_icon = "images/favicon.ico"
   favicon_shortcut_icon = "images/favicon.png"
   custom_stylesheets = []   # [ "scss/my_1.scss", "scss/my_2.scss" ]
