--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ publishDir    = "docs"
  #   weight  = 4
   [[menu.nav]]
     name    = "Entre em Contato"
-    url     = "contact"
+    url     = "#"
     weight  = 5
 
 # Site Params
@@ -48,23 +48,23 @@ publishDir    = "docs"
   # Google Analitycs
   googleAnalitycsID = "G-KDCT2Y1R4E"
   # We're using formspree.io for form handling, paste your formspree url below
-  fabform  = "https://fabform.io/f/USAg2Jl"
+  #fabform  = "https://fabform.io/f/USAg2Jl"
 
   # Contact Form
-  [params.contactForm]
-    placeholder_first_name        = "First Name"
-    placeholder_last_name         = "Last Name"
-    placeholder_email             = "Email"
-    placeholder_project_type      = "Project Type"
-    placeholder_about_the_project = "About the Project"
-    send_message                  = "Send Message"
+  #[params.contactForm]
+  #  placeholder_first_name        = "First Name"
+  #  placeholder_last_name         = "Last Name"
+  #  placeholder_email             = "Email"
+  #  placeholder_project_type      = "Project Type"
+  #  placeholder_about_the_project = "About the Project"
+  #  send_message                  = "Send Message"
 
-    [[params.contactForm.projectType]]
-      value = "gd"
-      title  = "Graphics Design"
-    [[params.contactForm.projectType]]
-      value = "wd"
-      title  = "Web Design"
+  #  [[params.contactForm.projectType]]
+  #    value = "gd"
+  #    title  = "Graphics Design"
+  #  [[params.contactForm.projectType]]
+  #    value = "wd"
+  #    title  = "Web Design"
   
   # Navbar Action Button
   [params.navAction]
@@ -85,15 +85,15 @@ publishDir    = "docs"
     secondary_button_url  = "contact"
 
   [params.blog]
-    read_more             = "read more"
+    read_more             = "saiba mais..."
 
   [params.portfolio]
     enable    = true
     title     = "Nosso Portfolio de Produtos e Serviços"
     subtitle  = "Criando experiências e buscando tornar o complexo claro e bonito."
-    view_project = "view project"
+    view_project = "abrir"
     more_works = "MORE WORKS"
-    scroll_down = "scroll down"
+    scroll_down = "role para baixo"
 
   [params.call_to_action]
     enable              = true
