--- a/data/team.yml
+++ b/data/team.yml
@@ -1,4 +1,4 @@
-enable  : false
+enable  : true
 title   : O Time da Via Arto, que faz a diferença!
 members  :
   - image       : images/team/team-member-one.jpg
