--- a/data/clients.yml
+++ b/data/clients.yml
@@ -1,4 +1,4 @@
-enable        : false
+enable        : true
 title         : "Nossos clientes"
 client_logos  : 
   ["images/clients/client-logo-one.png", "images/clients/client-logo-two.png", "images/clients/client-logo-three.png", "images/clients/client-logo-four.png", "images/clients/client-logo-five.png", "images/clients/client-logo-six.png", "images/clients/client-logo-seven.png", "images/clients/client-logo-eight.png", "images/clients/client-logo-nine.png", "images/clients/client-logo-ten.png"]
